[FIXED] the last character of a long line in a multiline textinput not being shown due to a text offset calculation issue
[FIXED] scrollbody now resizes to parent
[FIXED] textinput indicator now always visible
[FIXED] columnlist rows can have non-drawable extra info ("Blue" skin doesn't crash on it)
[FIXED] flickering menu
[FIXED] tablist scrolling problems

[CHANGED] columnlist row colors are now adjusted when a row is removed from the list
[CHANGED] columnlistarea.rowcolorindex now resets to 1 when the list is cleared
[CHANGED] columnlist:SetRowColumnText to columnlist:SetCellText
[CHANGED] columnlist:AdjustColumns to columnlist:PositionColumns
[CHANGED] license to zlib/libpng
[CHANGED] the loveframes table is now returned by init.lua
[CHANGED] template files are now expected to return a template table instead of calling loveframes.templates.Register
[CHANGED] textinput tries to scroll horizontally only if alt is pressed
[CHANGED] project-wide utf8 support
[CHANGED] the textinput's indicator is now always visible when being moved
[CHANGED] tooltip behaviour
[CHANGED] tooltips and submenus now pop-up with a delay
[CHANGED] scrollbar behavior is now more windows-y

[REMOVED] dt scrolling and its methods: GetDTScrolling() and SetDTScrolling()

================================================
Version 0.9.8.1 - Alpha (May 17 - 2014)
================================================
[ADDED] ability to specify a custom skin directory in a skin's lua file

[FIXED] frame:MakeTop not returning self in certain situations
[FIXED] ability to insert tabs into a textinput when all of the object's text was selected
[FIXED] ability to cause a single-line textinput to enter all text selected mode when no text had been entered

[CHANGED] returning false in a frame.OnClose event callback will prevent the frame from being removed
[CHANGED] tabs:AddTab now returns the tabbutton object associated with the new tab

================================================