@@ -53,6 +53,7 @@ Version 0.10 - Alpha (Release Date TBD)
 [FIXED] columnlist rows can have non-drawable extra info ("Blue" skin doesn't crash on it)
 [FIXED] flickering menu
 [FIXED] tablist scrolling problems
+[FIXED] invalid columnlist click bounds
 
 [CHANGED] columnlist row colors are now adjusted when a row is removed from the list
 [CHANGED] columnlistarea.rowcolorindex now resets to 1 when the list is cleared
